--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ body
 
   body {
     margin: 0;
+    background-color: #3C504C;
   }
   header {
-    background-color: #373738;
+    background-color: #3C504C;
     padding: 15px;
   }
   header ul {
@@ -32,13 +33,13 @@ body
   }
   button {
     padding: 15px;
-    background-color: #373738;
+    background-color: #3C504C;
     color: white;
     font-size: 15px;
     border-radius: 4px;
   }
   footer {
-    background-color: #373738;
+    background-color: #3C504C;
     padding: 5px;
     color: white;
   }
